<resources>
    <string name="app_name">IMU</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bookmark">Bookmark</string>
    <string name="going">Going</string>
    <string name="going2">Going</string>
    <string name="contact_info">Please contact me for more info:</string>
    <string name="signup">Sign Up</string>
    <string name="student_id">Student ID</string>

    <!--menu-->
    <string name="home">HOME</string>
    <!--<string name="events_cap">EVENTS</string>-->
    <string name="news_cap">NEWS</string>
    <string name="profile">PROFILE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="user_profile">User Profile</string>
    <string name="upload_log">Report Error</string>
    <string name="rate_us">RATE US</string>
    <string name="share">SHARE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="terms_and_conditions">TERMS &amp; CONDITIONS</string>
    <string name="about_us">ABOUT US</string>
    <string name="virtual_tour">VIRTUAL TOUR</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">CONTACT US</string>
    <string name="settings_2">SETTINGS</string>


    <string name="welcome">Welcome, </string>
    <string name="my_timetable">My Timetable</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="imu_news">IMU News</string>
    <string name="imu_qr_code">IMU QR Code</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="detail">详情</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Log in</string>
    <string name="system">系统</string>
    <string name="swipe">侧滑返回Sample</string>
    <string name="go_swipe_back">SwipeBackActivity+Fragment</string>
    <string name="go_swipe_back_f">SwipeBackFragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="press_again_exit">Press again to exit</string>

    <string name="error_no_internet">Please check your internet connection and try again.</string>
    <string name="error_connection_problem">Unable to connect to server at this time. Please try again later.</string>
    <string name="error_parsing_data">Unable to parse data correctly.</string>
    <string name="idno">ID No.</string>
    <string name="emailorphonenumber">Email/Phone number</string>
    <string name="emailaddfressorphonenumber">Email or Phone no.</string>
    <string name="fullname">Full Name</string>
    <string name="termsandcondition">By signing up you agree to our</string>
    <string name="termsandcondition_link"><![CDATA[Terms & Conditions]]></string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="student">Student</string>
    <string name="applicant">Applicant</string>
    <string name="tap_tp_choose">Tap to choose a User Type</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phoner number</string>
    <string name="one_time_password">OTP</string>
    <string name="reference_number">Reference Number:</string>
    <string name="please_enter_otp">Please enter the valid 6 character of OTP</string>
    <string name="otp_code">OTP code</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_alphanumeric">Please enter 4-15 alphanumeric characters</string>
    <string name="valid_otp_5min">Note: The validity of the OTP is only for 5 minutes.</string>
    <string name="submit">Submit</string>
    <string name="didnt_receive_sms">Didn\'t receive an SMS or email?</string>
    <string name="resend">Resend</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="key_in_email_phone">Please key in your Email ID/Mobile No. or Student ID</string>
    <string name="or">OR</string>
    <string name="forgot_password_question">Forgot your password?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="update_password">Update Password</string>
    <string name="invalid_email_phone">Invalid email address or phone number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="key_in_field">Key in at least one field</string>
    <string name="account_activation">Account Activation</string>
    <string name="invalid_otp">Invalid OTP code</string>
    <string name="sign_in">Sign In</string>
    <string name="sure_logout">Are you sure you want to Logout?</string>
    <string name="login_to_bookmark">Please login to bookmark.</string>
    <string name="hi_guest">Hi Guest</string>
    <string name="guest">Guest</string>
    <string name="search">search</string>
    <string name="search_by_event_title">Search by event title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="choose_date">Choose Date</string>


    <string name="event_type">Event Type</string>
    <string name="next">NEXT</string>
    <string name="tutorial_end">LET\'S START</string>
    <string name="tutorial_header_first">Welcome To IMU App</string>
    <string name="tutorial_header_second">Join an event</string>
    <string name="tutorial_header_third">Book a room</string>
    <string name="tutorial_header_fouth">Register a course</string>
    <string name="tutorial_desc">i\'m long long long desc</string>
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="category_3">Category 3</string>
    <string name="event_status">Event Status</string>
    <string name="rrsvp_status">RSVP Status</string>
    <string name="attended">Attended</string>
    <string name="invited">Invited</string>
    <string name="absent">Absent</string>
    <string name="missed">Missed</string>
    <string name="cancelled">Cancelled</string>

    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="not_going">Not Going</string>
    <string name="too_long_respond">Server is taking too long to respond. Please try again later.</string>
    <string name="filter">Filter</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="no_events">No Event Found</string>
    <string name="no_map">No Map</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="photo_dialog_title">Upload Pictures Option</string>
    <string name="photo_dialog_message">How do you want to set your picture?</string>

    <string name="session">Session</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>
    <string name="no_location_detected">No location detected</string>

    <string name="gps_permission_error">In order to use QR Code Scanner, please turn the location permission setting on in the application settings.</string>
    <string name="qr_success_message">You have successfully attended to the event.</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="notification">Notification</string>
    <string name="welcome_to_imu">Welcome to IMU</string>
    <string name="no_notification">No Notifications Found</string>
    <string name="loading">Loading...</string>
    <string name="no_event_details">Could not find any details for this event.</string>

    <string name="for1">For</string>

    <string name="news_tag_rss">rss</string>
    <string name="news_tag_channel">channel</string>
    <string name="news_tag_item">item</string>
    <string name="news_tag_title">title</string>
    <string name="news_tag_pubdate">pubDate</string>
    <string name="news_tag_description">description</string>
    <string name="news_tag_content">content:encoded</string>
    <string name="title_activity_maps">Map</string>
    <string name="details">Details</string>
    <string name="user_id">User ID</string>
    <string name="username">Username</string>
</resources>
