<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--<FrameLayout-->
            <!--android:id="@+id/toolbar_frame"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/colorPrimaryLight"-->
            <!--android:fitsSystemWindows="true">-->

            <!--<android.support.v7.widget.Toolbar-->
                <!--android:id="@+id/toolbar"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/action_bar_height"-->
                <!--android:focusable="true"-->
                <!--android:focusableInTouchMode="true"-->
                <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
                <!--app:layout_scrollFlags="scroll|enterAlways"-->
                <!--app:titleTextAppearance="@style/Toolbar_TextAppearance_White"-->
                <!--android:background="@color/colorPrimaryLight">-->
            <!--</android.support.v7.widget.Toolbar>-->
        <!--</FrameLayout>-->

        <FrameLayout
            android:id="@+id/toolbar_frame"
            android:fitsSystemWindows="true"
            android:background="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextAppearance="@style/Toolbar_TextAppearance_White"
                android:background="@color/colorPrimaryLight">

                <FrameLayout
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/layout_cancel_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:visibility="invisible">

                    <TextView
                        android:text="@string/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="@dimen/nav_text_size"
                        android:layout_gravity="left|center_vertical"
                        android:id="@+id/button_cancel_edit" />
                </FrameLayout>

                <TextView
                android:layout_gravity="center"
                android:text="@string/user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="@dimen/toolbar_text_size" />

                <FrameLayout
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:id="@+id/layout_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp">

                    <TextView
                        android:text="@string/edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="@dimen/nav_text_size"
                        android:layout_gravity="right|center_vertical"
                        android:id="@+id/button_edit_save" />
                </FrameLayout>
            </android.support.v7.widget.Toolbar>
        </FrameLayout>



        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view" />

    </LinearLayout>

</FrameLayout>
